# HoneyPottr

./: .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  BUILD_SUMMARY.md  CMakeLists.txt  COMPLETE_STATUS.md  CROSS_COMPILE_STATUS.md  Dockerfile  FINAL_RELEASE_SUMMARY.md  FINAL_STATUS.md  GITHUB_RELEASE_GUIDE.md  ICON_INTEGRATION_SUMMARY.md  INSTALLATION.md  INSTALLER_README.md  LICENSE  PRODUCTION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  REPOSITORY_STRUCTURE.md  TERMS_OF_SERVICE.txt  build.sh  docker-compose.yml  prepare_release.sh
.github/workflows/: windows-build.yml
config/: advanced_profile.json  basic_profile.json  default_config.json
include/artifacts/: ArtifactEngine.h  IArtifactModule.h
include/artifacts/modules/: FileSystemArtifactModule.h  HardwareArtifactModule.h  NetworkArtifactModule.h  ProcessArtifactModule.h  RegistryArtifactModule.h
include/common/: Constants.h  Types.h
include/config/: ConfigurationManager.h
include/logging/: Logger.h
include/monitoring/: ResourceMonitor.h
include/service/: ServiceController.h  WindowsService.h
include/utils/: SecurityUtils.h  WindowsUtils.h
installer/: HoneyPottr-Installer.nsi  HoneyPottr-Simple.nsi  HoneyPottr.wxs  INSTALLER_CHANGELOG.md  README_INSTALLERS.md  admin_privileges.xml
resources/: HoneyPottr.manifest  HoneyPottr.rc  resource.h
src/: main.cpp
src/artifacts/: ArtifactEngine.cpp
src/artifacts/modules/: FileSystemArtifactModule.cpp  HardwareArtifactModule.cpp  NetworkArtifactModule.cpp  ProcessArtifactModule.cpp  RegistryArtifactModule.cpp
src/config/: ConfigurationManager.cpp
src/logging/: Logger.cpp
src/monitoring/: ResourceMonitor.cpp
src/service/: ServiceController.cpp  WindowsService.cpp
src/utils/: SecurityUtils.cpp  WindowsUtils.cpp
